--- a/src/gui/About.fxml
+++ b/src/gui/About.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="230.0" prefWidth="426.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.2">
+<VBox prefHeight="230.0" prefWidth="426.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label prefHeight="40.0" prefWidth="90.0" text="About">
          <font>
