--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -43,6 +43,10 @@
             </Label>
             <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ComboBox fx:id="comboBoxDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label fx:id="labelErrorName" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
@@ -91,25 +95,30 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label fx:id="labelErrorEmail" textFill="#ff0101" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <padding>
                   <Insets left="8.0" />
                </padding>
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
             </Label>
             <Label fx:id="labelErrorBirthDate" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <padding>
                   <Insets left="8.0" />
                </padding>
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
             </Label>
-            <Label fx:id="labelErrorBaseSlary" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Label fx:id="labelErrorBaseSalary" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <padding>
                   <Insets left="8.0" />
                </padding>
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
             </Label>
-            <ComboBox fx:id="comboBoxDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
